# qml-import-qrc

./: CMakeLists.txt
qml/: CustomComponent.qml  main.qml  qml.qrc
src/: main.cpp
